inclusão lista de 3 itens

--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
  </head>
  <body>
    <h1> This is my first GitHub Page</h1>
+   <ul>
+    <li>Ciração usuário GitHub</li>
+    <li>criar repositório</li>
+    <li>Clonar repositório</li>
+   </ul>
 </body>
 </html>
